language/move-compiler/tests/move_check/translate/struct_in_expression_seq.move
script {
    fun main() {
        struct A {}
    }
}
